spacing issues from Aaron<3

--- a/Develop/client/src/components/Donation/style.css
+++ b/Develop/client/src/components/Donation/style.css
@@ -7,6 +7,18 @@
 	padding: 11px 15px 11px 0;
 }
 
+* {
+	text-align: center;
+}
+
+#five {
+	display: grid;
+	margin-left: auto;
+	margin-right: auto;
+	height: 200px;
+	width: 200px;
+}
+
 button {
 	display: block;
 	font-size: 16px;
@@ -22,28 +34,4 @@ button {
 	transition: all 100ms ease-in-out;
 	will-change: transform, background-color, box-shadow;
 	border: none;
-}
-
-button:active {
-	background-color:#39c926;
-	box-shadow: 0 6px 9px rgba(50, 50, 93, 0.06), 0 2px 5px rgba(0, 0, 0, 0.08), inset 0 1px 0 #e298d8;
-	transform: scale(0.99);
-}
-
-h1,
-h3 {
-	text-align: center;
-  font-size: 30px;
-}
-
-#donatePage {
-  text-align: center;
-}
-
-#five {
-	display: grid;
-	margin-left: auto;
-	margin-right: auto;
-	height: 200px;
-	width: 200px;
 }
